fixed padding on mobile site

--- a/src/Others/Others.css
+++ b/src/Others/Others.css
@@ -22,7 +22,7 @@
 @media (max-width:480px){
     .Others{
         display: flex;
-        margin: 0 0;
+        margin: 0 3px;
         padding : 0 5px;
     }
     .Others ul{
